# LeadEmailAutomation

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  design_guidelines.json  dev.sh  pyproject.toml  sample_leads.csv
.emergent/: emergent.yml
.github/workflows/: ci.yml
backend/: requirements.txt  server.py
backend/campaign_runs/: test-uae-outreach.json  uae-distributor-outreach.json
backend/tests/: conftest.py  test_outreach_api.py
campaign_runs/: uae-distributor-outreach.json
deploy/: lead-email-compose.yml
docs/: JUNIOR-IMPLEMENTATION-PLAYBOOK.md  deliverability-checklist.md  hostinger-traefik-deploy.md  mvp_plan.md  next_stage_plan.md
docs/samples/: draft_payload.json
frontend/: index.html  package-lock.json  package.json  server.js  tailwind.config.js  vite.config.js
frontend/public/: app.css  app.js
frontend/src/: App.jsx  index.css  main.jsx
memory/: ANALYSIS.md  PRD.md
src/outreach_mvp/: __init__.py  _jsonfile.py  api.py  apollo.py  claude_client.py  cli.py  compliance.py  contacted.py  dashboard.py  (+19 more)
test_reports/: iteration_1.json  iteration_2.json
tests/: env_helpers.py  test_api.py  test_apollo.py  test_backcompat.py  test_claude_client.py  test_compliance_api.py  test_contacted_and_unsubscribe.py  test_deliverability_icp.py  test_draft_workflow.py  test_enrichment_upgrade.py  test_guardrails.py  test_hardening.py  test_lead_scoring.py  test_llm_provenance.py  test_oauth_clients.py  test_oauth_setup.py  test_orchestrator_fixes.py  test_replies.py  test_response_graph.py  test_sending.py  test_sequences.py  test_storage_collision.py
(+16 files in other folders)
