[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-outreach-mvp"
version = "0.1.0"
description = "Draft-first AI email outreach MVP core"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
outreach-mvp = "outreach_mvp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
