[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-outreach-mvp"
version = "0.1.0"
description = "Draft-first AI email outreach MVP core"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.136.1",
  "uvicorn>=0.46.0",
  "httpx>=0.28.1",
]

[project.scripts]
outreach-mvp = "outreach_mvp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
